
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;
struct sockaddr {int dummy; } ;
typedef int __u32 ;
typedef int __u16 ;


 int __fatal_perror (char*) ;
 int free (void*) ;
 void* make_fwd_packet (int ,int ,int ,int ,int **,int,int*) ;
 int raw_sctp ;
 int sendto (int ,void*,int,int ,struct sockaddr*,int) ;
 int server_sctp ;

__attribute__((used)) static void send_fwd_chunk(__u16 sp, __u16 dp, __u16 streams[][2],
                    int streamlen, __u32 vtag, __u32 tsn)
{
  int p_len=0, ret;
  void *packet = make_fwd_packet(sp, dp, vtag, tsn, streams, streamlen, &p_len);
  ret = sendto(raw_sctp, packet, p_len, 0, (struct sockaddr *)&server_sctp, sizeof(struct sockaddr_in));
  if(ret < 0)
    __fatal_perror("sendto: sending FWD chunk");

  free(packet);
}
