; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_8556.c_send_fwd_chunk.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_8556.c_send_fwd_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

@raw_sctp = common dso_local global i32 0, align 4
@server_sctp = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"sendto: sending FWD chunk\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, [2 x i32]*, i32, i32, i32)* @send_fwd_chunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_fwd_chunk(i32 %0, i32 %1, [2 x i32]* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [2 x i32]*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store [2 x i32]* %2, [2 x i32]** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  store i32 0, i32* %13, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* %12, align 4
  %20 = load [2 x i32]*, [2 x i32]** %9, align 8
  %21 = bitcast [2 x i32]* %20 to i32**
  %22 = load i32, i32* %10, align 4
  %23 = call i8* @make_fwd_packet(i32 %16, i32 %17, i32 %18, i32 %19, i32** %21, i32 %22, i32* %13)
  store i8* %23, i8** %15, align 8
  %24 = load i32, i32* @raw_sctp, align 4
  %25 = load i8*, i8** %15, align 8
  %26 = load i32, i32* %13, align 4
  %27 = call i32 @sendto(i32 %24, i8* %25, i32 %26, i32 0, %struct.sockaddr* bitcast (i32* @server_sctp to %struct.sockaddr*), i32 4)
  store i32 %27, i32* %14, align 4
  %28 = load i32, i32* %14, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %6
  %31 = call i32 @__fatal_perror(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %32

32:                                               ; preds = %30, %6
  %33 = load i8*, i8** %15, align 8
  %34 = call i32 @free(i8* %33)
  ret void
}

declare dso_local i8* @make_fwd_packet(i32, i32, i32, i32, i32**, i32, i32*) #1

declare dso_local i32 @sendto(i32, i8*, i32, i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @__fatal_perror(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
